代码分装还有一个小问题